--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Food Ninja",
-    "short_name": "FoodNinja",
+    "name": "Food GeGe",
+    "short_name": "FoodGeGe",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#FFE9D2",
